# actix-diesel-user

./: .env  Cargo.toml
src/: connection.rs  main.rs
src/api/: mod.rs  user.rs
src/model/: user.rs
